content/docs/core/1.2.0/reference/vendr-core-services/countryservice.md
---
title: CountryService
description: API reference for CountryService in Vendr, the eCommerce solution for Umbraco v8+
---
## CountryService

```csharp
public class CountryService : EntityServiceBase, ICountryService
```

**Inheritance**

* class [EntityServiceBase](../entityservicebase/)
* interface [ICountryService](../icountryservice/)

**Namespace**
* [Vendr.Core.Services](../)

### Constructors

#### CountryService

```csharp
public CountryService(IRepositoryFactory repositoryFactory, IUnitOfWorkProvider uowProvider, 
    ILogger logger, ICache cache, IEntityStateCache stateCache)
```


### Methods

#### CountryExists

```csharp
public bool CountryExists(Guid storeId, string code)
```


---

#### DeleteCountry (1 of 2)

```csharp
public void DeleteCountry(Guid id)
```

---

#### DeleteCountry (2 of 2)

```csharp
public void DeleteCountry(Country entity)
```


---

#### DeleteRegion (1 of 2)

```csharp
public void DeleteRegion(Guid id)
```

---

#### DeleteRegion (2 of 2)

```csharp
public void DeleteRegion(Region entity)
```


---

#### GetCountries

```csharp
public IEnumerable<CountryReadOnly> GetCountries(Guid storeId)
```


---

#### GetCountry (1 of 2)

```csharp
public CountryReadOnly GetCountry(Guid id)
```

---

#### GetCountry (2 of 2)

```csharp
public CountryReadOnly GetCountry(Guid storeId, string code)
```


---

#### GetIso3166CountryRegions

```csharp
public IEnumerable<Iso3166Country> GetIso3166CountryRegions()
```


---

#### GetRegion (1 of 2)

```csharp
public RegionReadOnly GetRegion(Guid id)
```

---

#### GetRegion (2 of 2)

```csharp
public RegionReadOnly GetRegion(Guid storeId, Guid countryId, string code)
```


---

#### GetRegions (1 of 2)

```csharp
public IEnumerable<RegionReadOnly> GetRegions(Guid storeId)
```

---

#### GetRegions (2 of 2)

```csharp
public IEnumerable<RegionReadOnly> GetRegions(Guid storeId, Guid countryId)
```


---

#### RegionExists

```csharp
public bool RegionExists(Guid storeId, Guid countryId, string code)
```


---

#### SaveCountry

```csharp
public void SaveCountry(Country entity)
```


---

#### SaveRegion

```csharp
public void SaveRegion(Region entity)
```


---

#### SortCountries

```csharp
public void SortCountries(Guid[] sortedIds)
```


---

#### SortRegions

```csharp
public void SortRegions(Guid[] sortedIds)
```


<!-- DO NOT EDIT: generated by xmldocmd for Vendr.Core.dll -->
